reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__enums__enum_with_discriminant_input.snap
---
source: reflectapi-demo/src/tests/enums.rs
expression: "super::into_input_schema::<TestEnumWithDiscriminant>().input_types"
---
{
  "types": [
    {
      "kind": "struct",
      "name": "reflectapi::Empty",
      "description": "Struct object with no fields",
      "fields": "none"
    },
    {
      "kind": "enum",
      "name": "reflectapi_demo::tests::enums::TestEnumWithDiscriminant",
      "variants": [
        {
          "name": "Variant1",
          "fields": "none",
          "discriminant": 1
        },
        {
          "name": "Variant2",
          "fields": "none",
          "discriminant": 2
        }
      ]
    }
  ]
}
