reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__enums__enum_with_discriminant_output-2.snap
---
source: reflectapi-demo/src/tests/enums.rs
expression: "super :: into_output_typescript_code :: < TestEnumWithDiscriminant > ()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name:

export function client(base: string | Client): __definition.Interface {
  return __implementation.__client(base);
}

export namespace __definition {
  export interface Interface {
    output_test: (
      input: {},
      headers: {},
      options?: RequestOptions,
    ) => AsyncResult<reflectapi_demo.tests.enums.TestEnumWithDiscriminant, {}>;
  }
}
export namespace reflectapi {
  /**
   * Struct object with no fields
   */
  export interface Empty {}

  /**
   * Error object which is expected to be never returned
   */
  export interface Infallible {}
}

export namespace reflectapi_demo {
  export namespace tests {
    export namespace enums {
      export type TestEnumWithDiscriminant =
        | 1 /* Variant1 */
        | 2 /* Variant2 */;
    }
  }
}

namespace __implementation {

  function output_test(client: Client) {
    return (input: {}, headers: {}, options?: RequestOptions) =>
      __request<
        {},
        {},
        reflectapi_demo.tests.enums.TestEnumWithDiscriminant,
        {}
      >(client, "/output_test", input, headers, options);
  }
}
