reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__enums__enum_with_discriminant_output-4.snap
---
source: reflectapi-demo/src/tests/enums.rs
expression: "super :: into_output_python_code :: < TestEnumWithDiscriminant > ()"
---
"""
Generated Python client for api_client.

DO NOT MODIFY THIS FILE MANUALLY.
This file is automatically generated by ReflectAPI.
"""

from __future__ import annotations


# Standard library imports
from enum import Enum
from typing import Annotated, Any, Generic, Optional, TypeVar, Union

# Third-party imports
from pydantic import BaseModel, ConfigDict, Field

# Runtime imports
from reflectapi_runtime import AsyncClientBase, ClientBase, ApiResponse
from reflectapi_runtime import ReflectapiEmpty
from reflectapi_runtime import ReflectapiInfallible


from enum import IntEnum


class ReflectapiDemoTestsEnumsTestEnumWithDiscriminant(IntEnum):
    """"""

    VARIANT1 = 1
    """"""

    VARIANT2 = 2
    """"""


# Namespace classes for dotted access to types
class reflectapi_demo:
    """Namespace for reflectapi_demo types."""

    class tests:
        """Namespace for tests types."""

        class enums:
            """Namespace for enums types."""

            TestEnumWithDiscriminant = ReflectapiDemoTestsEnumsTestEnumWithDiscriminant


class AsyncOutputClient:
    """Async client for output operations."""

    def __init__(self, client: AsyncClientBase) -> None:
        self._client = client

    async def test(
        self,
    ) -> ApiResponse[reflectapi_demo.tests.enums.TestEnumWithDiscriminant]:
        """

        Returns:
            ApiResponse[reflectapi_demo.tests.enums.TestEnumWithDiscriminant]: Response containing reflectapi_demo.tests.enums.TestEnumWithDiscriminant data
        """
        path = "/output_test"

        params: dict[str, Any] = {}
        return await self._client._make_request(
            path,
            params=params if params else None,
            response_model=reflectapi_demo.tests.enums.TestEnumWithDiscriminant,
        )


class AsyncClient(AsyncClientBase):
    """Async client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.output = AsyncOutputClient(self)


class OutputClient:
    """Synchronous client for output operations."""

    def __init__(self, client: ClientBase) -> None:
        self._client = client

    def test(
        self,
    ) -> ApiResponse[reflectapi_demo.tests.enums.TestEnumWithDiscriminant]:
        """

        Returns:
            ApiResponse[reflectapi_demo.tests.enums.TestEnumWithDiscriminant]: Response containing reflectapi_demo.tests.enums.TestEnumWithDiscriminant data
        """
        path = "/output_test"

        params: dict[str, Any] = {}
        return self._client._make_request(
            path,
            params=params if params else None,
            response_model=reflectapi_demo.tests.enums.TestEnumWithDiscriminant,
        )


class Client(ClientBase):
    """Synchronous client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.output = OutputClient(self)


# External type definitions
StdNumNonZeroU32 = Annotated[int, "Rust NonZero u32 type"]
StdNumNonZeroU64 = Annotated[int, "Rust NonZero u64 type"]
StdNumNonZeroI32 = Annotated[int, "Rust NonZero i32 type"]
StdNumNonZeroI64 = Annotated[int, "Rust NonZero i64 type"]

# Rebuild models to resolve forward references
for _model in [
    ReflectapiDemoTestsEnumsTestEnumWithDiscriminant,
]:
    try:
        _model.model_rebuild()
    except Exception:
        pass
