reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__enums__enum_with_discriminant_output.snap
---
source: reflectapi-demo/src/tests/enums.rs
expression: "super :: into_output_schema :: < TestEnumWithDiscriminant > ().output_types"
---
{
  "types": [
    {
      "kind": "struct",
      "name": "reflectapi::Infallible",
      "description": "Error object which is expected to be never returned",
      "fields": "none"
    },
    {
      "kind": "enum",
      "name": "reflectapi_demo::tests::enums::TestEnumWithDiscriminant",
      "variants": [
        {
          "name": "Variant1",
          "fields": "none",
          "discriminant": 1
        },
        {
          "name": "Variant2",
          "fields": "none",
          "discriminant": 2
        }
      ]
    }
  ]
}
