reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__enums__enum_with_empty_variant_and_fields-4.snap
---
source: reflectapi-demo/src/tests/enums.rs
expression: "super :: into_input_python_code :: < TestEnumWithEmptyVariantAndFields > ()"
---
"""
DO NOT MODIFY THIS FILE MANUALLY
This file was generated by reflectapi-cli

Schema name:
"""

from __future__ import annotations


# Standard library imports
from enum import Enum
from typing import Annotated, Any, Generic, Optional, TypeVar, Union

# Third-party imports
from pydantic import (
    BaseModel,
    ConfigDict,
    Field,
    RootModel,
    model_serializer,
    model_validator,
)

# Runtime imports
from reflectapi_runtime import AsyncClientBase, ClientBase, ApiResponse
from reflectapi_runtime import ReflectapiEmpty
from reflectapi_runtime import ReflectapiInfallible
from reflectapi_runtime import (
    parse_externally_tagged as _parse_externally_tagged,
    serialize_externally_tagged as _serialize_externally_tagged,
)


class ReflectapiDemoTestsEnumsTestEnumWithEmptyVariantAndFieldsVariant2Variant(
    BaseModel
):
    """Variant2 variant"""

    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    field_0: int


# Externally tagged enum using RootModel
ReflectapiDemoTestsEnumsTestEnumWithEmptyVariantAndFieldsVariants = Union[
    Literal["Variant1"],
    ReflectapiDemoTestsEnumsTestEnumWithEmptyVariantAndFieldsVariant2Variant,
]


class ReflectapiDemoTestsEnumsTestEnumWithEmptyVariantAndFields(
    RootModel[ReflectapiDemoTestsEnumsTestEnumWithEmptyVariantAndFieldsVariants]
):
    """Externally tagged enum"""

    @model_validator(mode="before")
    @classmethod
    def _validate(cls, data):
        return _parse_externally_tagged(
            data,
            {
                "Variant1": "_unit",
                "Variant2": lambda v: (
                    ReflectapiDemoTestsEnumsTestEnumWithEmptyVariantAndFieldsVariant2Variant(
                        field_0=v
                    )
                ),
            },
            (ReflectapiDemoTestsEnumsTestEnumWithEmptyVariantAndFieldsVariant2Variant,),
            "ReflectapiDemoTestsEnumsTestEnumWithEmptyVariantAndFields",
        )

    @model_serializer
    def _serialize(self):
        return _serialize_externally_tagged(
            self.root,
            {
                "Variant1": (lambda r: r == "Variant1", lambda r: "Variant1"),
                "Variant2": (
                    lambda r: isinstance(
                        r,
                        ReflectapiDemoTestsEnumsTestEnumWithEmptyVariantAndFieldsVariant2Variant,
                    ),
                    lambda r: {"Variant2": r.field_0},
                ),
            },
            "ReflectapiDemoTestsEnumsTestEnumWithEmptyVariantAndFields",
        )


# Namespace classes for dotted access to types
class reflectapi_demo:
    """Namespace for reflectapi_demo types."""

    class tests:
        """Namespace for tests types."""

        class enums:
            """Namespace for enums types."""

            TestEnumWithEmptyVariantAndFieldsVariant2Variant = (
                ReflectapiDemoTestsEnumsTestEnumWithEmptyVariantAndFieldsVariant2Variant
            )
            TestEnumWithEmptyVariantAndFields = (
                ReflectapiDemoTestsEnumsTestEnumWithEmptyVariantAndFields
            )


class AsyncInputClient:
    """Async client for input_ operations."""

    def __init__(self, client: AsyncClientBase) -> None:
        self._client = client

    async def test(
        self,
        data: Optional[
            reflectapi_demo.tests.enums.TestEnumWithEmptyVariantAndFields
        ] = None,
    ) -> ApiResponse[Any]:
        """

        Args:
            data: Request data for the test operation.

        Returns:
            ApiResponse[Any]: Response containing Any data
        """
        path = "/input_test"

        params: dict[str, Any] = {}
        return await self._client._make_request(
            path,
            params=params if params else None,
            json_model=data,
            response_model=None,
        )


class AsyncClient(AsyncClientBase):
    """Async client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.input_ = AsyncInputClient(self)


class InputClient:
    """Synchronous client for input_ operations."""

    def __init__(self, client: ClientBase) -> None:
        self._client = client

    def test(
        self,
        data: Optional[
            reflectapi_demo.tests.enums.TestEnumWithEmptyVariantAndFields
        ] = None,
    ) -> ApiResponse[Any]:
        """

        Args:
            data: Request data for the test operation.

        Returns:
            ApiResponse[Any]: Response containing Any data
        """
        path = "/input_test"

        params: dict[str, Any] = {}
        return self._client._make_request(
            path,
            params=params if params else None,
            json_model=data,
            response_model=None,
        )


class Client(ClientBase):
    """Synchronous client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.input_ = InputClient(self)


# External type definitions
StdNumNonZeroU32 = Annotated[int, "Rust NonZero u32 type"]
StdNumNonZeroU64 = Annotated[int, "Rust NonZero u64 type"]
StdNumNonZeroI32 = Annotated[int, "Rust NonZero i32 type"]
StdNumNonZeroI64 = Annotated[int, "Rust NonZero i64 type"]

# Rebuild models to resolve forward references
for _model in [
    ReflectapiDemoTestsEnumsTestEnumWithEmptyVariantAndFields,
]:
    try:
        _model.model_rebuild()
    except Exception:
        pass
