reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__enums__enum_with_fields-2.snap
---
source: reflectapi-demo/src/tests/enums.rs
expression: "super :: into_input_typescript_code :: < TestEnumWithFields > ()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name:

export function client(base: string | Client): __definition.Interface {
  return __implementation.__client(base);
}

export namespace __definition {
  export interface Interface {
    input_test: (
      input: reflectapi_demo.tests.enums.TestEnumWithFields,
      headers: {},
      options?: RequestOptions,
    ) => AsyncResult<{}, {}>;
  }
}
export namespace reflectapi {
  /**
   * Struct object with no fields
   */
  export interface Empty {}

  /**
   * Error object which is expected to be never returned
   */
  export interface Infallible {}
}

export namespace reflectapi_demo {
  export namespace tests {
    export namespace enums {
      export type TestEnumWithFields =
        | {
            Variant1: number /* u8 */;
          }
        | {
            Variant2: [string, number /* f64 */];
          };
    }
  }
}

namespace __implementation {

  function input_test(client: Client) {
    return (
      input: reflectapi_demo.tests.enums.TestEnumWithFields,
      headers: {},
      options?: RequestOptions,
    ) =>
      __request<reflectapi_demo.tests.enums.TestEnumWithFields, {}, {}, {}>(
        client,
        "/input_test",
        input,
        headers,
        options,
      );
  }
}
